--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,7 +21,7 @@ main:
  #  url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+    url: files/Baker-CV-2025.pdf
     
 #  - title: "Guide"
 #    url: /markdown/
