--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Megan Baker"
 title_separator          : "-"
 name                     : &name "Megan Baker"
 description              : &description "personal description"
-url                      : https://meganbaker.net # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://www.meganbaker.net # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "materialrevolt/materialrevolt.github.io"
 
