--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   name             : "Megan Baker"
   pronouns         : # example: "she/her"  
   bio              : "PhD candidate in art history"
-  location         : "Washington DC"
+  location         : "Boston & Washington DC"
   employer         : "University of Delaware"
   uri              : # URL
   email            : "mebaker@udel.edu" 
